# weather-api

./: Cargo.toml  swagger.json
src/: lib.rs  main.rs  swagger.rs
